# quanta_pulsa

./: .gitignore  CMakeLists.txt  QuantaPulsa.cpp  README.md  logs.csv  malformed_test_log.csv  scmi_logs.csv
docs/: enhancements.md  plan.md
include/: CognitiveEngine.h  DataTypes.h  LegacyMonitoring.h  LogParser.h  TelemetryExporter.h
src/: CognitiveEngine.cpp  LegacyMonitoring.cpp  LogParser.cpp  QuantaPulsa.cpp  TelemetryExporter.cpp
tests/: bdd_log_parser.cpp  test_alerting.cpp  test_cognitive_engine.cpp  test_log_parser.cpp  test_monitoring.cpp
tools/: monitor_progress.py
